deployment/k8s-configs/base/reservation-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation-service-deployment
  labels:
    app: reservation-service 
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: reservation-service 
  template:
    metadata:
      labels:
        app: reservation-service 
    spec:
      containers:
      - name: reservation-service 
        image: asia-east1-docker.pkg.dev/ticket-master-tall15421542/ticket-master/service:latest
        command: ["java", "-javaagent:/opentelemetry-javaagent.jar","-Djava.security.manager=allow", "-cp", "app.jar"]
        args: ["lab.tall15421542.app.reservation.Service", 
          "-c", "config/client.properties",
          "-sc", "stream-config/stream.properties"
        ]
        volumeMounts:
          - name: client-properties
            mountPath: /config
            readOnly: true
          - name: stream-properties
            mountPath: /stream-config
            readOnly: true
        resources:
          requests:
            memory: "2G"
            cpu: "500m"
      volumes:
        - name: client-properties
          configMap: 
            name: client.properties
        - name: stream-properties
          configMap: 
            name: reservation-service.stream.properties
